2001-10-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * eps.py: Relax precision.
