@@ -57,7 +57,7 @@ class SpE(unittest.TestCase):
 
         print eta, "expected", eta_OK
 
-        eta_pass = abs(eta - eta_OK) < eps.testing_eps
+        eta_pass = abs((eta - eta_OK) / eta_OK) < eps.testing_eps
        
         self.failUnless(eta_pass)
 
